# boxspread

./: .gitignore  .user.yml  README.md  dbt_project.yml  docker-compose.yml  profiles.yml  pyproject.toml
models/: boxspreads.py  boxspreads.sql  properties.yml  schema.yml  unique_symbols.sql
seeds/: properties.yml  symbols.csv  trades.csv
